fix: UI flow
